Fix responsive issue on mobile

--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ footer {
     
     th,
     td {
-        padding: 0.9rem 2rem;
+        padding: 0.9rem 1.7rem;
         text-align: left;
     }
 
